# sha256

./: .gitignore  README.md  meson.build  sha256.cpp  sha256.hpp  sha256sum.cpp
test/: test.cpp
